plugins {
    id 'java'
    id 'xyz.jpenilla.run-paper' version '2.3.1'
}

group = 'pl.karpik122'
version = '1.9'

repositories {
    mavenCentral()

    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }

    maven {
        url = 'https://jitpack.io'
    }
}

dependencies {
    // JDA jest potrzebne tylko podczas kompilacji. Serwer pobierze je przy
    // uruchomieniu na podstawie sekcji `libraries` w plugin.yml.
    compileOnly 'net.dv8tion:JDA:6.4.1'

    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
    compileOnly 'org.spigotmc:spigot-api:1.21.11-R0.1-SNAPSHOT'
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
    options.compilerArgs.addAll([
            '-Xlint:deprecation',
            '-Xlint:unchecked'
    ])
}

processResources {
    def props = [version: version]

    inputs.properties props
    filteringCharset = 'UTF-8'

    filesMatching('plugin.yml') {
        expand props
    }
}

tasks.named('jar') {
    archiveFileName.set("${project.name}-${project.version}.jar")
}

tasks.named('runServer') {
    minecraftVersion('1.21.11')
}
